--- a/app/src/main/res/drawable/roundedbtn_input.xml
+++ b/app/src/main/res/drawable/roundedbtn_input.xml
@@ -1,11 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Color de fondo naranja con algo de transparencia -->
-    <solid android:color="#FF7A33"/>
-
-    <!-- Bordes redondeados -->
-    <corners android:radius="30dp"/> <!-- Puedes ajustar el valor de radius para cambiar el redondeo -->
-
-    <!-- Opcional: Borde alrededor del botón -->
-    <stroke android:color="#FF4500" android:width="2dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <corners android:radius="12dp"/>
 </shape>
