--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
             <!-- Input: Correo -->
             <EditText
                 android:id="@+id/email"
+                android:importantForAutofill="no"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="20dp"
@@ -47,6 +48,7 @@
             <!-- Input: Contraseña -->
             <EditText
                 android:id="@+id/password"
+                android:importantForAutofill="no"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="8dp"
