--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="160dp"
     android:layout_height="wrap_content"
@@ -12,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#FFF"
-        android:padding="12dp"
+        android:padding="8dp"
         android:gravity="center_horizontal">
 
         <ImageView
@@ -21,26 +19,18 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/rounded_image" />
+            android:background="@drawable/rounded_image"
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:id="@+id/tvNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Producto"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="#333"
-            android:fontFamily="@font/baloo" />
-
-        <TextView
-            android:id="@+id/tvPrecio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="$0.00"
-            android:textSize="14sp"
-            android:textColor="#E34A35"
-            android:layout_marginTop="4dp" />
+            android:gravity="center"
+            android:fontFamily="@font/baloo"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
