--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="teal_700">#F44336</color>
+    <color name="teal_700">#71BCBC</color>
+    <color name="red">#D32F2F</color>
+    <color name="gray">#757575</color>
+    <color name="rosa_claro">#F3B3CD</color>
+    <color name="rojo_vivo">#E34A35</color>
+    <color name="crema">#FEF4F0</color>
+    <color name="blanco">#FFFFFF</color>
+    <color name="f3b3cd">#71BCBC</color>
+    <color name="e34a35">#E34A35</color>
+    <color name="fef4f0">#FEF4F0</color>
 </resources>
