--- a/app/src/main/res/layout/activity_editar_producto.xml
+++ b/app/src/main/res/layout/activity_editar_producto.xml
@@ -1,77 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="24dp"
+    android:background="@color/fef4f0">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="24dp"
-        android:background="@color/fef4f0">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/etNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:orientation="vertical">
+            android:fontFamily="@font/baloo"
+            android:backgroundTint="@color/gray"
+            android:hint="Nombre" />
 
-            <EditText
-                android:id="@+id/etNombre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/baloo"
-                android:backgroundTint="@color/gray"
-                android:hint="Nombre" />
+        <EditText
+            android:id="@+id/etDescripcion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:layout_marginTop="12dp"
+            android:backgroundTint="@color/gray"
+            android:hint="Descripción" />
 
-            <EditText
-                android:id="@+id/etDescripcion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/baloo"
-                android:layout_marginTop="12dp"
-                android:backgroundTint="@color/gray"
-                android:hint="Descripción" />
+        <EditText
+            android:id="@+id/etStock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:layout_marginTop="12dp"
+            android:backgroundTint="@color/gray"
+            android:hint="Stock"
+            android:inputType="number" />
 
-            <EditText
-                android:id="@+id/etStock"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/baloo"
-                android:layout_marginTop="12dp"
-                android:backgroundTint="@color/gray"
-                android:hint="Stock"
-                android:inputType="number" />
+        <EditText
+            android:id="@+id/etPrecio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:layout_marginTop="12dp"
+            android:backgroundTint="@color/gray"
+            android:hint="Precio"
+            android:inputType="numberDecimal" />
 
-            <EditText
-                android:id="@+id/etPrecio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/baloo"
-                android:layout_marginTop="12dp"
-                android:backgroundTint="@color/gray"
-                android:hint="Precio"
-                android:inputType="numberDecimal" />
+        <Button
+            android:id="@+id/btnGuardar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:layout_marginTop="24dp"
+            android:backgroundTint="@color/e34a35"
+            android:text="Guardar cambios"
+            android:textColor="@color/white" />
 
-            <Button
-                android:id="@+id/btnGuardar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/baloo"
-                android:layout_marginTop="24dp"
-                android:backgroundTint="@color/e34a35"
-                android:text="Guardar cambios"
-                android:textColor="@color/white" />
-
-            <Button
-                android:id="@+id/btnCancelar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/baloo"
-                android:layout_marginTop="8dp"
-                android:backgroundTint="@color/gray"
-                android:text="Cancelar"
-                android:textColor="@color/white" />
-        </LinearLayout>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btnCancelar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="@color/gray"
+            android:text="Cancelar"
+            android:textColor="@color/white" />
+    </LinearLayout>
+</ScrollView>
