--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="f3b3cd">#71BCBC</color>
     <color name="e34a35">#E34A35</color>
     <color name="fef4f0">#FEF4F0</color>
+    <color name="green">#4CAF50</color>">
 </resources>
