pruebas crear pedidos empleado

--- a/app/src/main/res/layout/activity_pantallaprincipaladmin.xml
+++ b/app/src/main/res/layout/activity_pantallaprincipaladmin.xml
@@ -13,12 +13,12 @@
         android:id="@+id/tvAppName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F1F1F1"
+        android:background="@color/cardview_light_background"
         android:fontFamily="@font/baloo"
         android:gravity="center|left"
         android:padding="16dp"
         android:text="Hola &quot;Nombre Admin&quot;"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,7 +48,10 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="@drawable/bottom_nav_bg"
+        app:itemTextColor="@drawable/bottom_nav_colors"
+        app:itemBackground="@drawable/bottom_nav_item_background"
+        app:itemRippleColor="@drawable/bottom_nav_item_ripple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
