--- a/app/src/main/res/layout/activity_pantallaprincipalempleado.xml
+++ b/app/src/main/res/layout/activity_pantallaprincipalempleado.xml
@@ -22,7 +22,7 @@
 
     <!-- Contenedor del fragmento -->
     <FrameLayout
-        android:id="@+id/frameContainerEmpleado"
+        android:id="@+id/frameContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/tvAppName"
