--- a/app/src/main/res/menu/admin_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/admin_bottom_nav_menu.xml
@@ -20,8 +20,11 @@
         android:icon="@drawable/ic_profile"
         android:title="Perfil" />
 
+    <!-- Eliminar o comentar esta sección -->
+    <!--
     <item
         android:id="@+id/nav_employees"
-        android:icon="@drawable/ic_employees"
+        android:icon="@drawable/ic_empleados"
         android:title="Empleados" />
+    -->
 </menu>
