--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- otras personalizaciones -->
+    </style>
     <style name="CustomAlertDialog" parent="Theme.Material3.DayNight.Dialog.Alert">
         <item name="android:background">@color/gray</item>
         <item name="android:textColorPrimary">@color/white</item>
