ccambios en crear pedido

--- a/app/src/main/res/layout/fragment_crear_pedido.xml
+++ b/app/src/main/res/layout/fragment_crear_pedido.xml
@@ -7,6 +7,18 @@
     android:padding="16dp"
     android:background="#FEF4F0">
 
+
+    <Button
+        android:id="@+id/btnVolver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="← Volver"
+        android:backgroundTint="#E34A35"
+        android:textColor="#FFFFFF"
+        android:layout_marginBottom="12dp"
+        android:fontFamily="@font/baloo"
+        android:padding="8dp" />
+
     <!-- Barra de búsqueda -->
     <SearchView
         android:id="@+id/searchViewProducto"
@@ -42,6 +54,17 @@
         android:padding="12dp"
         android:layout_marginBottom="12dp" />
 
+    <TextView
+        android:id="@+id/tvTotal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Total: 0.00€"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="#E34A35"
+        android:gravity="end"
+        android:layout_marginBottom="12dp" />
+
     <!-- Botón de confirmación -->
     <Button
         android:id="@+id/btnConfirmarPedido"
@@ -53,4 +76,5 @@
         android:backgroundTint="#E34A35"
         android:fontFamily="@font/baloo"
         app:cornerRadius="12dp" />
+
 </LinearLayout>
