--- a/app/src/main/res/layout/item_pedido.xml
+++ b/app/src/main/res/layout/item_pedido.xml
@@ -45,5 +45,16 @@
             android:text="• Producto 1 x2\n• Producto 2 x1"
             android:layout_marginTop="8dp"
             android:textColor="#444" />
+
+        <TextView
+            android:id="@+id/tvTotalPedido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total: "
+            android:textStyle="bold"
+            android:textColor="#E34A35"
+            android:layout_marginTop="8dp" />
+
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
