cambios en pedidos

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="e34a35">#E34A35</color>
     <color name="fef4f0">#FEF4F0</color>
     <color name="green">#4CAF50</color>">
+    <color name="azul">#2196F3</color>
+    <color name="verde">#4CAF50</color>
 </resources>
